pass store id
